--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
+    "next-mdx-remote": "^4.1.0",
+    "postcss": "^8.4.17",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "8.24.0",
