--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
