--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
     "next": "12.3.1",
-    "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-highlight": "^5.0.2",
-    "tailwindcss": "^3.1.8"
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "tailwindcss": "^3.1.8",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^2.0.1",
