--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.6.0",
     "next": "12.3.1",
