--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "https://lucasprag.com"
 baseurl: ""
 title: "Lucas Arantes"
-description: "Blog about Ruby, Elixir, command line, text editors, developer productivity, etc."
+description: "Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc."
 
 collections:
   posts:
