--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
-- name: TeamLead.tools
-  url: https://teamlead.tools
-  description: Tools for teams working remotely.
+- name: StoryPoints.online
+  url: https://storypoints.online/
+  description: Estimate your stories & tasks faster in real time without letting the first response influence the others.
 
 - name: Alguém Recommenda? (pt-BR)
   url: https://alguemrecomenda.ca/
@@ -11,6 +11,10 @@
   description: TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
 
 # DEAD
+# - name: TeamLead.tools
+#   url: https://teamlead.tools
+#   description: Tools for teams working remotely.
+
 # - name: FormigaBot
 #   url: https://formigabot.com/
 #   description: The all-in-one bot for Slack for tech startups working async.
