--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ url: "https://lucasprag.com"
 baseurl: ""
 title: "Lucas Arantes"
 description: "Blog about Ruby, Elixir, command line, text editors, developer productivity, personal projects, etc."
+keyboards: "Lucasprag, Software Engineer, Elixir Developer, Side Projects, VSCode, Productivity, solopreneur, Command Line Productivity, Phoenix, React, Ruby on Rails"
 
 collections:
   posts:
