Add ShareTheGood.News to the list of projects

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,7 @@
+- name: Share The Good News
+  url: https://sharethegood.news/
+  description: Helping christians share the good news of Jesus in Canada.
+
 - name: StoryPoints.online
   url: https://storypoints.online/
   description: Estimate your stories & tasks faster in real time without letting the first response influence the others.
