--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,6 +10,10 @@
   url: https://marketplace.visualstudio.com/items?itemName=lucasprag.teamdocs
   description: TeamDocs ensures that your centralized documentation is conveniently accessible from the Activity Bar, regardless of the specific project you are currently working on.
 
+- name: SimpleBlack
+  url: https://github.com/lucasprag/simpleblack
+  description: "A black colorscheme for (neo)vim, real black background, #000000."
+
 # DEAD
 # - name: Alguém Recommenda? (pt-BR)
 #   url: https://alguemrecomenda.ca/
