Update project description

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - name: Share The Good News
   url: https://sharethegood.news/
-  description: Helping christians share the good news of Jesus in Canada.
+  description: Helping christians share the good news of Jesus in the US & Canada.
 
 - name: StoryPoints.online
   url: https://storypoints.online/
